[gd_scene load_steps=18 format=3 uid="uid://c4hybdem8420b"]

[ext_resource type="Texture2D" uid="uid://dslx1l6nfdygr" path="res://images/crosshair.png" id="1_0e48y"]
[ext_resource type="Script" uid="uid://cimraru3wuf3k" path="res://crosshair.gd" id="2_epypp"]
[ext_resource type="Script" uid="uid://b2gwl4hovqrlu" path="res://coordinate_display.gd" id="3_epypp"]
[ext_resource type="Script" uid="uid://cf0tif0hacra4" path="res://frame counter.gd" id="4_kdubu"]
[ext_resource type="Texture2D" uid="uid://ph2ry6gsxg1f" path="res://images/wall/wall_block.png" id="4_q6r6c"]
[ext_resource type="Script" uid="uid://dh574q1ulqphh" path="res://wall.gd" id="5_kdubu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdubu"]

[sub_resource type="TileSet" id="TileSet_0e48y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6r6c"]
size = Vector2(72, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_rj586"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4d7sh"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kdubu"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_d21ai"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ir8iy"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_hqns4"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_x0ka3"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0h7mo"]
radius = 5.0

[node name="Node2D" type="Node2D"]

[node name="Crosshair" type="Sprite2D" parent="."]
position = Vector2(36, 36)
texture = ExtResource("1_0e48y")
script = ExtResource("2_epypp")

[node name="Area2D" type="Area2D" parent="Crosshair"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crosshair/Area2D"]
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_kdubu")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_0e48y")

[node name="CoordinateDisplay" type="Label" parent="."]
z_index = 4
offset_left = 11.0
offset_top = 559.0
offset_right = 266.0
offset_bottom = 615.0
text = "coordinate:"
vertical_alignment = 1
script = ExtResource("3_epypp")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
z_index = 4
offset_left = 13.0
offset_top = 525.0
offset_right = 241.0
offset_bottom = 563.0
text = "frames:"
script = ExtResource("4_kdubu")

[node name="wall" type="Sprite2D" parent="." groups=["wall"]]
position = Vector2(-247, 83)
texture = ExtResource("4_q6r6c")
script = ExtResource("5_kdubu")

[node name="hitbox" type="Area2D" parent="wall"]

[node name="center" type="CollisionShape2D" parent="wall/hitbox"]
shape = SubResource("RectangleShape2D_q6r6c")

[node name="top" type="Area2D" parent="wall"]

[node name="top" type="CollisionShape2D" parent="wall/top"]
position = Vector2(0, -51)
shape = SubResource("CircleShape2D_rj586")

[node name="bot" type="Area2D" parent="wall"]

[node name="bot2" type="CollisionShape2D" parent="wall/bot"]
position = Vector2(1, 46)
shape = SubResource("CircleShape2D_4d7sh")

[node name="left" type="Area2D" parent="wall"]

[node name="left" type="CollisionShape2D" parent="wall/left"]
position = Vector2(-47, -4)
shape = SubResource("CircleShape2D_kdubu")

[node name="right" type="Area2D" parent="wall"]

[node name="right" type="CollisionShape2D" parent="wall/right"]
position = Vector2(49, -2)
shape = SubResource("CircleShape2D_d21ai")

[node name="top_left" type="Area2D" parent="wall"]

[node name="top_left" type="CollisionShape2D" parent="wall/top_left"]
position = Vector2(-47, -50)
shape = SubResource("CircleShape2D_ir8iy")

[node name="top_right" type="Area2D" parent="wall"]

[node name="top_right" type="CollisionShape2D" parent="wall/top_right"]
position = Vector2(48, -50)
shape = SubResource("CircleShape2D_hqns4")

[node name="bot_left" type="Area2D" parent="wall"]

[node name="bot_left" type="CollisionShape2D" parent="wall/bot_left"]
position = Vector2(-45, 44)
shape = SubResource("CircleShape2D_x0ka3")

[node name="bot_right" type="Area2D" parent="wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/bot_right"]
position = Vector2(47, 45)
shape = SubResource("CircleShape2D_0h7mo")

[connection signal="area_entered" from="Crosshair/Area2D" to="wall" method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="wall/top" to="wall" method="_on_top_area_entered"]
[connection signal="area_exited" from="wall/top" to="wall" method="_on_top_area_exited"]
[connection signal="area_entered" from="wall/bot" to="wall" method="_on_bot_area_entered"]
[connection signal="area_exited" from="wall/bot" to="wall" method="_on_bot_area_exited"]
[connection signal="area_entered" from="wall/left" to="wall" method="_on_left_area_entered"]
[connection signal="area_exited" from="wall/left" to="wall" method="_on_left_area_exited"]
[connection signal="area_entered" from="wall/right" to="wall" method="_on_right_area_entered"]
[connection signal="area_exited" from="wall/right" to="wall" method="_on_right_area_exited"]
[connection signal="area_entered" from="wall/top_left" to="wall" method="_on_top_left_area_entered"]
[connection signal="area_exited" from="wall/top_left" to="wall" method="_on_top_left_area_exited"]
[connection signal="area_entered" from="wall/top_right" to="wall" method="_on_top_right_area_entered"]
[connection signal="area_exited" from="wall/top_right" to="wall" method="_on_top_right_area_exited"]
[connection signal="area_entered" from="wall/bot_left" to="wall" method="_on_bot_left_area_entered"]
[connection signal="area_exited" from="wall/bot_left" to="wall" method="_on_bot_left_area_exited"]
[connection signal="area_entered" from="wall/bot_right" to="wall" method="_on_bot_right_area_entered"]
[connection signal="area_exited" from="wall/bot_right" to="wall" method="_on_bot_right_area_exited"]
